--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
               aria-expanded="false"
               aria-controls="collapseTwo"
             >
-              Accordion Item #2
+              What is the difference between global scope and block scope?
             </button>
           </h2>
           <div
@@ -70,28 +70,28 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <strong>This is the second item's accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
+              The variables defined outside of any function or curly brackets
+              are known as global variables and have global scope. Global scope
+              means that the variables can be accessed from any part of that
+              program, any function or conditional state can access that
+              variable. On the other hand, Block scope is a sub-type of local
+              scope. The block scope can be defined as the scope of the
+              variables inside the curly brackets {}.You are only allowed to
+              refer to these variables from within the curly brackets {}.
             </div>
           </div>
         </div>
-        <div class="accordion-item">
+        <div class="accordion-item bg-dark text-white">
           <h2 class="accordion-header" id="headingThree">
             <button
-              class="accordion-button collapsed"
+              class="accordion-button collapsed bg-dark text-white"
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#collapseThree"
               aria-expanded="false"
               aria-controls="collapseThree"
             >
-              Accordion Item #3
+              Description of Javascript event loop
             </button>
           </h2>
           <div
@@ -101,14 +101,48 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
+              The event loop is the secret behind JavaScript’s asynchronous
+              programming. JS executes all operations on a single thread, but
+              using a few smart data structures, it gives us the illusion of
+              multi-threading. The call stack is responsible for keeping track
+              of all the operations in line to be executed. Whenever a function
+              is finished, it is popped from the stack. The event queue is
+              responsible for sending new functions to the stack for processing.
+              Whenever an async function is called, it is sent to a browser API.
+              Based on the command received from the call stack, the API starts
+              its own single-threaded operation. Event loop constantly checks
+              whether or not the call stack is empty. If it is empty, new
+              functions are added from the event queue. If it is not, then the
+              current function call is processed.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item bg-dark text-white">
+          <h2 class="accordion-header" id="headingTwo">
+            <button
+              class="accordion-button collapsed bg-dark text-white"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseFour"
+              aria-expanded="false"
+              aria-controls="collapseFour"
+            >
+              How many ways to get undefined?
+            </button>
+          </h2>
+          <div
+            id="collapseFour"
+            class="accordion-collapse collapse"
+            aria-labelledby="headingFour"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              There are eight ways to get undefined. Some of them are: Declaring
+              a variable without assigning a value to it, implicit return of
+              function due to missing return statement, return statement which
+              do not return anything, look up of non existing property in an
+              object, function parameter that have not passed, anything that has
+              been set to the value of undefined.
             </div>
           </div>
         </div>
